<resources>
    <string name="app_name">Tourify</string>
    <string name="charity">Charity</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="events">Events</string>
    <string name="tours">Tours</string>
    <string name="join">Join</string>
    <string name="loyalty">Loyalty</string>
    <string name="cartoon_image">cartoon image</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="event">Name</string>
    <string name="date">Date</string>
    <string name="assessment">Assessment</string>
    <string name="popular">Popular event</string>
    <string name="duration">Duration</string>
    <string name="transport">Transport</string>
    <string name="description_of_event">Description_of_event</string>
</resources>